fix gap sortable

--- a/DnD-list/style.css
+++ b/DnD-list/style.css
@@ -8,8 +8,8 @@ body {
  position: relative;
  display: flex;
  flex-direction: column;
+ gap: 5px;
  padding: 0;
- border-bottom: 1px solid #000;
 }
 
 .item {
@@ -17,7 +17,6 @@ body {
  font-size: 30px;
  list-style-type: none;
  border: 1px solid #000;
- border-bottom: none;
  user-select: none;
  cursor: grab;
 }
